--- a/dotnet/SpaceFlight.API/SpaceFlight.API.csproj
+++ b/dotnet/SpaceFlight.API/SpaceFlight.API.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Model\" />
+    <Folder Include="Infrastructure\Persistence\" />
+  </ItemGroup>
+
 </Project>
