fix: dockerfile and settings

--- a/dotnet/SpaceFlight.API/Properties/launchSettings.json
+++ b/dotnet/SpaceFlight.API/Properties/launchSettings.json
@@ -34,7 +34,7 @@
       "publishAllPorts": true,
       "useSSL": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
