--- a/dotnet/SpaceFlight.Test/SpaceFlight.Test.csproj
+++ b/dotnet/SpaceFlight.Test/SpaceFlight.Test.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="FluentAssertions" Version="6.7.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+		<PackageReference Include="Moq" Version="4.18.2" />
 		<PackageReference Include="NSubstitute" Version="4.4.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
 		<PackageReference Include="xunit" Version="2.4.1" />
