refactor: little things

--- a/dotnet/SpaceFlight.API/appsettings.Development.json
+++ b/dotnet/SpaceFlight.API/appsettings.Development.json
@@ -7,7 +7,6 @@
   },
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "space_flight_db",
-    "CollectionName": "articles"
+    "DatabaseName": "space_flight_db"
   }
 }
