--- a/dotnet/SpaceFlight.API/appsettings.Production.json
+++ b/dotnet/SpaceFlight.API/appsettings.Production.json
@@ -7,7 +7,6 @@
   },
   "DatabaseSettings": {
     "ConnectionString": "mongodb+srv://mongo:MLr5hAe94gD6BOIj@cluster.jbonwcy.mongodb.net",
-    "DatabaseName": "space_flight_db",
-    "CollectionName": "articles"
+    "DatabaseName": "space_flight_db"
   }
 }
