--- a/dotnet/SpaceFlight.API/appsettings.Production.json
+++ b/dotnet/SpaceFlight.API/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "DatabaseSettings": {
-    "ConnectionString": "mongodb+srv://mongo:MLr5hAe94gD6BOIj@cluster.jbonwcy.mongodb.net",
+    "ConnectionString": "",
     "DatabaseName": "space_flight_db"
   }
 }
